@@ -103,8 +103,8 @@ public class GeneralPropertiesView extends AbstractPropertiesTabView<GeneralProp
             boolean isAbsolute = Path.of(newValue).isAbsolute();
             libSpecificFileDirSwitchIcon.setGlyph(isAbsolute ? RELATIVE_PATH : ABSOLUTE_PATH);
             libSpecificFileDirSwitchTooltip.setText(isAbsolute ? switchToRelativeText : switchToAbsoluteText);
-            librarySpecificFileDirectoryTooltip.setText(newValue.trim().isEmpty() ?
-                    Localization.lang("Library-specific file directory") : Localization.lang("Library-specific file directory: %0", newValue));
+            librarySpecificFileDirectoryTooltip.setText(newValue.isBlank() ?
+                                                        Localization.lang("Library-specific file directory") : Localization.lang("Library-specific file directory: %0", newValue));
         });
         userSpecificFileDirectory.textProperty().addListener((_, _, newValue) -> {
             boolean isAbsolute = Path.of(newValue).isAbsolute();
@@ -116,8 +116,8 @@ public class GeneralPropertiesView extends AbstractPropertiesTabView<GeneralProp
             boolean isAbsolute = Path.of(newValue).isAbsolute();
             laTexSpecificFileDirSwitchIcon.setGlyph(isAbsolute ? RELATIVE_PATH : ABSOLUTE_PATH);
             laTexSpecificFileDirSwitchTooltip.setText(isAbsolute ? switchToRelativeText : switchToAbsoluteText);
-            latexFileDirectoryTooltip.setText(newValue.trim().isEmpty()
-                    ? Localization.lang("LaTeX file directory") : Localization.lang("LaTeX file directory: %0", newValue));
+            latexFileDirectoryTooltip.setText(newValue.isBlank()
+                                              ? Localization.lang("LaTeX file directory") : Localization.lang("LaTeX file directory: %0", newValue));
         });
 
         Platform.runLater(() -> {
