@@ -1,5 +1,6 @@
 package org.jabref.gui.welcome.quicksettings.viewmodel;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
 
 import javafx.beans.property.ObjectProperty;
@@ -24,6 +25,7 @@ public class ThemeDialogViewModel extends AbstractViewModel {
     private final WorkspacePreferences workspacePreferences;
     private final GuiPreferences preferences;
     private final DialogService dialogService;
+    private boolean shouldThemeSyncOs;
 
     public ThemeDialogViewModel(GuiPreferences preferences, DialogService dialogService) {
         this.preferences = preferences;
@@ -34,10 +36,14 @@ public class ThemeDialogViewModel extends AbstractViewModel {
     }
 
     private void initializeFromCurrentTheme() {
+        shouldThemeSyncOs = workspacePreferences.shouldThemeSyncOs();
+
         Theme currentTheme = workspacePreferences.getTheme();
         switch (currentTheme.getType()) {
-            case DEFAULT -> selectedThemeProperty.set(ThemeTypes.LIGHT);
-            case EMBEDDED -> selectedThemeProperty.set(ThemeTypes.DARK);
+            case LIGHT ->
+                    selectedThemeProperty.set(ThemeTypes.LIGHT);
+            case DARK ->
+                    selectedThemeProperty.set(ThemeTypes.DARK);
             case CUSTOM -> {
                 selectedThemeProperty.set(ThemeTypes.CUSTOM);
                 customPathProperty.set(currentTheme.getName());
@@ -63,8 +69,8 @@ public class ThemeDialogViewModel extends AbstractViewModel {
 
     public void browseForThemeFile() {
         String fileDir = customPathProperty.get().isEmpty() ?
-                preferences.getInternalPreferences().getLastPreferencesExportPath().toString() :
-                customPathProperty.get();
+                         preferences.getInternalPreferences().getLastPreferencesExportPath().toString() :
+                         customPathProperty.get();
 
         FileDialogConfiguration fileDialogConfiguration = new FileDialogConfiguration.Builder()
                 .addExtensionFilter(StandardFileType.CSS)
@@ -78,18 +84,34 @@ public class ThemeDialogViewModel extends AbstractViewModel {
 
     public boolean isValidConfiguration() {
         if (selectedThemeProperty.get() == ThemeTypes.CUSTOM) {
-            return !customPathProperty.get().trim().isEmpty() &&
-                    Path.of(customPathProperty.get()).toFile().exists();
+            return !customPathProperty.get().isBlank() && Files.exists(Path.of(customPathProperty.get()));
         }
         return selectedThemeProperty.get() != null;
     }
 
     public void saveSettings() {
-        Theme newTheme = switch (selectedThemeProperty.get()) {
-            case LIGHT -> Theme.light();
-            case DARK -> Theme.dark();
-            case CUSTOM -> Theme.custom(customPathProperty.get().trim());
-        };
-        workspacePreferences.setTheme(newTheme);
+        workspacePreferences.setThemeSyncOs(shouldThemeSyncOs);
+
+        if (shouldThemeSyncOs) {
+            workspacePreferences.setTheme(Theme.system());
+        } else if (selectedThemeProperty.get() != null) {
+            Theme newTheme = switch (selectedThemeProperty.get()) {
+                case LIGHT ->
+                        Theme.light();
+                case DARK ->
+                        Theme.dark();
+                case CUSTOM ->
+                        Theme.custom(customPathProperty.get().trim());
+            };
+            workspacePreferences.setTheme(newTheme);
+        }
+    }
+
+    public void setThemeSyncOs(boolean selected) {
+        this.shouldThemeSyncOs = selected;
+    }
+
+    public boolean shouldThemeSyncOs() {
+        return shouldThemeSyncOs;
     }
 }
