@@ -6,6 +6,7 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import org.jabref.logic.JabRefException;
 import org.jabref.logic.openoffice.frontend.OOFrontend;
 import org.jabref.logic.openoffice.frontend.UpdateCitationMarkers;
 import org.jabref.logic.openoffice.style.JStyle;
@@ -18,6 +19,7 @@ import org.jabref.model.openoffice.uno.NoDocumentException;
 import org.jabref.model.openoffice.uno.UnoScreenRefresh;
 import org.jabref.model.openoffice.uno.UnoTextRange;
 import org.jabref.model.openoffice.util.OOListUtil;
+import org.jabref.model.openoffice.util.OOResult;
 
 import com.sun.star.beans.IllegalTypeException;
 import com.sun.star.beans.NotRemoveableException;
@@ -26,6 +28,7 @@ import com.sun.star.lang.WrappedTargetException;
 import com.sun.star.text.XTextCursor;
 import com.sun.star.text.XTextDocument;
 import com.sun.star.text.XTextRange;
+import com.sun.star.uno.XComponentContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -36,67 +39,61 @@ public class EditMerge {
     private EditMerge() {
     }
 
-    /**
-     * @return true if modified document
-     */
-    public static boolean mergeCitationGroups(XTextDocument doc, OOFrontend frontend, JStyle style)
-            throws
-            CreationException,
-            IllegalArgumentException,
-            IllegalTypeException,
-            NoDocumentException,
-            NotRemoveableException,
-            PropertyVetoException,
-            WrappedTargetException {
-
-        boolean madeModifications;
-
+    /// @return true if modified document
+    public static OOResult<Boolean, JabRefException> mergeCitationGroups(XTextDocument doc, XComponentContext context, OOFrontend frontend, JStyle style) {
         try {
-            UnoScreenRefresh.lockControllers(doc);
+            boolean madeModifications;
 
-            List<JoinableGroupData> joinableGroups = EditMerge.scan(doc, frontend);
+            try {
+                UnoScreenRefresh.lockControllers(doc);
 
-            for (JoinableGroupData joinableGroupData : joinableGroups) {
-                List<CitationGroup> groups = joinableGroupData.group;
+                List<JoinableGroupData> joinableGroups = EditMerge.scan(doc, frontend);
 
-                List<Citation> newCitations = groups.stream()
-                                                     .flatMap(group -> group.citationsInStorageOrder.stream())
-                                                     .collect(Collectors.toList());
+                for (JoinableGroupData joinableGroupData : joinableGroups) {
+                    List<CitationGroup> groups = joinableGroupData.group;
 
-                CitationType citationType = groups.getFirst().citationType;
-                List<Optional<OOText>> pageInfos = frontend.backend.combinePageInfos(groups);
+                    List<Citation> newCitations = groups.stream()
+                                                        .flatMap(group -> group.citationsInStorageOrder.stream())
+                                                        .collect(Collectors.toList());
 
-                frontend.removeCitationGroups(groups, doc);
-                XTextCursor textCursor = joinableGroupData.groupCursor;
-                textCursor.setString(""); // Also remove the spaces between.
+                    CitationType citationType = groups.getFirst().citationType;
+                    List<Optional<OOText>> pageInfos = frontend.backend.combinePageInfos(groups);
 
-                List<String> citationKeys = OOListUtil.map(newCitations, Citation::getCitationKey);
+                    frontend.removeCitationGroups(groups, doc);
+                    XTextCursor textCursor = joinableGroupData.groupCursor;
+                    textCursor.setString(""); // Also remove the spaces between.
 
-                /* insertSpaceAfter: no, it is already there (or could be) */
-                boolean insertSpaceAfter = false;
-                UpdateCitationMarkers.createAndFillCitationGroup(frontend,
-                        doc,
-                        citationKeys,
-                        pageInfos,
-                        citationType,
-                        OOText.fromString("tmp"),
-                        textCursor,
-                        style,
-                        insertSpaceAfter);
+                    List<String> citationKeys = OOListUtil.map(newCitations, Citation::getCitationKey);
+
+                    /* insertSpaceAfter: no, it is already there (or could be) */
+                    boolean insertSpaceBefore = false;
+                    boolean insertSpaceAfter = false;
+                    UpdateCitationMarkers.createAndFillCitationGroup(frontend,
+                            doc,
+                            context,
+                            citationKeys,
+                            pageInfos,
+                            citationType,
+                            OOText.fromString("tmp"),
+                            textCursor,
+                            style,
+                            insertSpaceBefore,
+                            insertSpaceAfter);
+                }
+
+                madeModifications = !joinableGroups.isEmpty();
+            } finally {
+                UnoScreenRefresh.unlockControllers(doc);
             }
 
-            madeModifications = !joinableGroups.isEmpty();
-        } finally {
-            UnoScreenRefresh.unlockControllers(doc);
+            return OOResult.ok(madeModifications);
+        } catch (CreationException | IllegalTypeException | NoDocumentException | NotRemoveableException | PropertyVetoException | WrappedTargetException e) {
+            return OOResult.error(new JabRefException(e.getMessage(), e));
         }
-
-        return madeModifications;
     }
 
-    /**
-     * @param group       A list of consecutive citation groups only separated by spaces.
-     * @param groupCursor A cursor covering the XTextRange of each entry in group (and the spaces between them)
-     */
+    /// @param group       A list of consecutive citation groups only separated by spaces.
+    /// @param groupCursor A cursor covering the XTextRange of each entry in group (and the spaces between them)
     private record JoinableGroupData(List<CitationGroup> group, XTextCursor groupCursor) {
     }
 
@@ -135,17 +132,17 @@ public class EditMerge {
         }
     }
 
-    /**
-     * Decide if group could be added to state.currentGroup
-     *
-     * @param group        The CitationGroup to test
-     * @param currentRange The XTextRange corresponding to group.
-     * @return false if cannot add, true if can.  If returned true, then state.cursorBetween and state.currentGroupCursor are expanded to end at the start of currentRange.
-     */
+    /// Decide if group could be added to state.currentGroup
+    ///
+    /// @param group        The CitationGroup to test
+    /// @param currentRange The XTextRange corresponding to group.
+    /// @return false if cannot add, true if can.  If returned true, then state.cursorBetween and state.currentGroupCursor are expanded to end at the start of currentRange.
     private static boolean checkAddToGroup(ScanState state, CitationGroup group, XTextRange currentRange) {
         if (state.currentGroup.isEmpty()) {
             return false;
         }
+
+        final String loggerMessage = "MergeCitationGroups: cursorBetween.end != currentGroupCursor.end";
 
         Objects.requireNonNull(state.currentGroupCursor);
         Objects.requireNonNull(state.cursorBetween);
@@ -177,8 +174,8 @@ public class EditMerge {
                                 state.prevRange.getString(),
                                 currentRange.getString(),
                                 (textOrder == 0
-                                        ? "they start at the same position"
-                                        : "the start of the latter precedes the start of the first"));
+                                 ? "they start at the same position"
+                                 : "the start of the latter precedes the start of the first"));
                 LOGGER.warn(msg);
                 return false;
             }
@@ -193,10 +190,20 @@ public class EditMerge {
 
         // assume: currentGroupCursor.getEnd() == cursorBetween.getEnd()
         if (UnoTextRange.compareEnds(state.cursorBetween, state.currentGroupCursor) != 0) {
-            LOGGER.warn("MergeCitationGroups: cursorBetween.end != currentGroupCursor.end");
-            throw new IllegalStateException("MergeCitationGroups failed");
+            LOGGER.warn(loggerMessage);
+            return false;
         }
 
+        return checkCouldExpand(state, currentRange, loggerMessage);
+    }
+
+    /// Helper method for checkAddToGroup. Tries to expand state.currentGroupCursor and state.cursorBetween by going right to reach rangeStart.
+    ///
+    /// @param state         The CitationGroup to test.
+    /// @param currentRange  The XTextRange corresponding to group.
+    /// @param loggerMessage The failure message for the LOGGER.
+    /// @return false if cannot expand, true if can.
+    private static boolean checkCouldExpand(ScanState state, XTextRange currentRange, String loggerMessage) {
         /*
          * Try to expand state.currentGroupCursor and state.cursorBetween by going right to reach
          * rangeStart.
@@ -213,7 +220,7 @@ public class EditMerge {
             couldExpand = thisCharCursor.goRight((short) 1, true);
             String thisChar = thisCharCursor.getString();
             thisCharCursor.collapseToEnd();
-            if (thisChar.isEmpty() || "\n".equals(thisChar) || !thisChar.trim().isEmpty()) {
+            if (thisChar.isEmpty() || "\n".equals(thisChar) || !thisChar.isBlank()) {
                 couldExpand = false;
                 if (!thisChar.isEmpty()) {
                     thisCharCursor.goLeft((short) 1, false);
@@ -225,17 +232,14 @@ public class EditMerge {
 
             // These two should move in sync:
             if (UnoTextRange.compareEnds(state.cursorBetween, state.currentGroupCursor) != 0) {
-                LOGGER.warn("MergeCitationGroups: cursorBetween.end != currentGroupCursor.end (during expand)");
-                throw new IllegalStateException("MergeCitationGroups failed");
+                LOGGER.warn("{} (during expand)", loggerMessage);
+                return false;
             }
         }
-
         return couldExpand;
     }
 
-    /**
-     * Add group to state.currentGroup Set state.cursorBetween to start at currentRange.getEnd() Expand state.currentGroupCursor to also cover currentRange Set state.prev to group, state.prevRange to currentRange
-     */
+    /// Add group to state.currentGroup Set state.cursorBetween to start at currentRange.getEnd() Expand state.currentGroupCursor to also cover currentRange Set state.prev to group, state.prevRange to currentRange
     private static void addToCurrentGroup(ScanState state, CitationGroup group, XTextRange currentRange) {
         final boolean isNewGroup = state.currentGroup.isEmpty();
         if (!isNewGroup) {
@@ -255,7 +259,7 @@ public class EditMerge {
         // If new group, create currentGroupCursor
         if (isNewGroup) {
             state.currentGroupCursor = currentRange.getText()
-                                                    .createTextCursorByRange(currentRange.getStart());
+                                                   .createTextCursorByRange(currentRange.getStart());
         }
 
         // include currentRange in currentGroupCursor
@@ -263,7 +267,7 @@ public class EditMerge {
 
         if (UnoTextRange.compareEnds(state.cursorBetween, state.currentGroupCursor) != 0) {
             LOGGER.warn("MergeCitationGroups: cursorBetween.end != currentGroupCursor.end");
-            throw new IllegalStateException("MergeCitationGroups failed");
+            return;
         }
 
         /* Store data about last entry in currentGroup */
@@ -271,9 +275,7 @@ public class EditMerge {
         state.prevRange = currentRange;
     }
 
-    /**
-     * Scan the document for joinable groups. Return those found.
-     */
+    /// Scan the document for joinable groups. Return those found.
     private static List<JoinableGroupData> scan(XTextDocument doc, OOFrontend frontend)
             throws
             NoDocumentException,
@@ -289,7 +291,7 @@ public class EditMerge {
 
         for (CitationGroup group : groups) {
             XTextRange currentRange = frontend.getMarkRange(doc, group)
-                                               .orElseThrow(IllegalStateException::new);
+                                              .orElseThrow(IllegalStateException::new);
 
             /*
              * Decide if we add group to the group. False when the group is empty.
